# dmfakeit

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci_linux_clang.yml  ci_linux_gcc.yml  ci_windows_msvc.yml
include/: dmfakeit.h  dmfakeit_config.h.in
src/dmfakeit_module/: dmfakeit_module.cpp  dmfakeit_module.def  dmfakeit_module.h
test/dmfakeittest/: dmfakeittest.cpp
